css: z-index fix

--- a/styl/board.styl
+++ b/styl/board.styl
@@ -41,6 +41,7 @@ ul, li
 		
 		&.focused
 			transform scale(1.4)
+			z-index 1
 			box-shadow 0px 0px 15px 0px rgba(0,0,0,0.4)
 			
 	.square li
